--- a/web/php-lib/values.ini
+++ b/web/php-lib/values.ini
@@ -1,6 +1,6 @@
 ; DataBase
 host = localhost
-user = navt
+dbuser = navt
 password = zxcv
 dbname = dart_blog
 charset = utf8mb4
@@ -8,3 +8,4 @@ charset = utf8mb4
 ; Jwt
 secret = Ywb9srPc
 algorithm = HS256
+header = "App-Token"
