--- a/web/php-lib/values.ini
+++ b/web/php-lib/values.ini
@@ -6,6 +6,10 @@ dbname = dart_blog
 charset = utf8mb4
 
 ; Jwt
-secret = Ywb9srPc
+secret = terces
 algorithm = HS256
 header = "App-Token"
+; Period of life jwt
+days = 1
+hours = 12
+minutes = 0
