--- a/web/php-lib/values.ini
+++ b/web/php-lib/values.ini
@@ -5,11 +5,11 @@ password = zxcv
 dbname = dart_blog
 charset = utf8mb4
 
-; Jwt
+; JWT
 secret = terces
 algorithm = HS256
 header = "App-Token"
 ; Period of life jwt
-days = 1
+days = 0
 hours = 12
 minutes = 0
